# Spec4

./: .coverage  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.spec4/: SPECMEM.md  code_review.json  phase1.json  stack.json  vision.json
.spec4/phases/: phase1.json  phase2.json  phase3.json  phase4.json  phase5.json  phase6.json
src/spec4/: __init__.py  a2a_bus.py  app.py  app_constants.py  browser_prefs.py  callbacks.py  layouts.py  project_manager.py  providers.py  session.py  streaming.py  tavily_mcp.py
src/spec4/agents/: _image_probe.py  _utils.py  brainstormer.py  code_scanner.py  deployer.py  designer.py  phaser.py  reviewer.py  stack_advisor.py
src/spec4/assets/: v3.css
src/spec4/callbacks/: __init__.py  designer.py
src/spec4/layouts/: __init__.py  _chat.py  _done.py  _setup.py  _shared.py  designer.py
tests/: README.md  test_a2a_bus.py  test_agents.py  test_app_constants.py  test_designer.py  test_image_probe.py  test_project_manager.py  test_providers.py  test_session.py  test_streaming.py  test_tavily_mcp.py  test_utils.py
