[project]
name = "spec4"
version = "0.1.3"
description = "AI-assisted software project planning — from idea to executable coding phases"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Robert Crowe", email = "crowe3555@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.24",
    "dash>=2.17.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=0.14.0",
    "litellm>=1.82.0",
    "mcp>=1.26.0",
]

[project.scripts]
spec4 = "spec4.app:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "Makefile.publish",
    "dist/",
]
